package com.abhinay.cleanarchitecturenoteapp.core.util


/**
 * Created by Abhinay on 04/02/25.
 *
 *
 */
object TestTags {

    const val ORDER_SECTION = "ORDER_SECTION"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"
    const val NOTE_ITEM = "NOTE_ITEM"
}