...
            FloatingActionButton(
                onClick = {
                    viewModel.onEvent(AddEditNoteEvent.SaveNote)
                }, backgroundColor = MaterialTheme.colors.primary
            ) {

                Icon(imageVector = Icons.Default.Save, contentDescription = "Save")

            }
        }, scaffoldState = scaffoldState
    ) {

        Column(
...
